# biogas-flyer

./: .env.example  .env.local  .gitignore  CLAUDE.md  README.md  hugo.toml  package-lock.json  package.json  tsconfig.tsbuildinfo
.claude/: settings.json
.github/workflows/: deploy.yml
assets/css/: custom.css
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 373ca7396fa1_initial_without_users_table.py  daa8a2c352a1_initial.py
backend/src/biogas/: config.py  database.py  main.py
backend/src/biogas/api/: admin.py  articles.py  auth.py  deps.py  papers.py  qa.py
backend/src/biogas/models/: __init__.py  article.py  paper.py  qa.py  user.py
backend/src/biogas/prompts/: paper_interpretation.txt
backend/src/biogas/schemas/: __init__.py  article.py  auth.py  paper.py  qa.py
backend/src/biogas/services/: ai_pipeline.py  auth_service.py  oss.py  pdf_parser.py  qa_engine.py  wechat.py
backend/src/biogas/tasks/: process_paper.py
backend/tests/: conftest.py  test_api_articles.py  test_api_auth.py  test_services.py
code/: index.html  index.qmd
content/: about.md  tools.md
design/images/: 沼液还田.fig
frontend/: .env.local  package.json
layouts/: baseof.html  index.html
layouts/_default/: single.html
layouts/partials/: extend_head.html  floating-toc.html  hero.html  understanding-card.html
scripts/: deploy.sh  migrate_first_article.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ArticleCard.tsx  ArticleSection.tsx  Footer.tsx  Header.tsx  HeroBanner.tsx  LoginDialog.tsx  MapSection.tsx  (+4 more)
(+23 files in other folders)
